--- a/app/src/main/res/layout/item_taks.xml
+++ b/app/src/main/res/layout/item_taks.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/vie_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp">
+    android:layout_margin="16dp"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/tv_title"
