--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tasks"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        tools:visibility="gone"
+        android:layout_height="match_parent"
+        tools:visibility="visible"
         tools:itemCount="8"
+        tools:listitem="@layout/item_task"
+        android:layout_marginTop="?attr/actionBarSize"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/fab"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
